--- a/hometask_2/src/main/resources/static/index.html
+++ b/hometask_2/src/main/resources/static/index.html
@@ -30,6 +30,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#!/cart">Корзина</a>
                 </li>
+                <li class="nav-item" ng-show="isUserLoggedIn()">
+                    <a class="nav-link"  href="#!/orders">Мои заказы</a>
+                </li>
 
                 <li class="nav-item" ng-show="!isUserLoggedIn()">
                     <form class="align-middle" ng-submit="tryToAuth()">
@@ -59,6 +62,7 @@
     <script src="store/store.js"></script>
     <script src="cart/cart.js"></script>
     <script src="welcome/welcome.js"></script>
+    <script src="orders/orders.js"></script>
 </div>
 
 </body>
