--- a/hometask_2/src/main/resources/static/orders/orders.html
+++ b/hometask_2/src/main/resources/static/orders/orders.html
@@ -1,37 +1,20 @@
 <div>
     <p></p>
-    <h3>Корзина</h3>
+    <h3>Мои заказы</h3>
     <table class="table table-hover">
         <tr>
-            <td>Название товара</td>
-            <td>Количество</td>
-            <td>Цена</td>
+            <td>ID</td>
+            <td>Адрес доставки</td>
+            <td>Стоимость</td>
         </tr>
         <tbody>
-        <tr ng-repeat="item in cart.items">
-            <td>{{item.productTitle}}</td>
-            <td>{{item.quantity}}</td>
-            <td>{{item.pricePerProduct + ' x ' + item.quantity + ' = ' + item.price}}</td>
-        </tr>
-        <tr>
-            <td></td>
-            <td>Итого</td>
-            <td>{{Cart.totalPrice}}</td>
+        <tr ng-repeat="order in MyOrders">
+            <td>{{order.id}}</td>
+            <td>{{order.address}}</td>
+            <td>{{order.totalPrice}}</td>
         </tr>
         </tbody>
     </table>
-    <p>
-        <button class="btn btn-secondary" ng-click="clearCart()">Очистить корзину</button>
-    </p>
-
-    <p></p>
-    <h3>Детали заказа</h3>
-    <form novalidate>
-        <input class="form-control" type="text" placeholder="Номер телефона получателя" ng-model="orderDetails.phone">
-        <p></p>
-        <input class="form-control" type="text" placeholder="Адрес доставки" ng-model="orderDetails.address">
-        <p></p>
-    </form>
 
     <button class="btn btn-primary" ng-click="checkOut()" ng-show="isUserLoggedIn() && cart.items.length > 0">Оформить заказ</button>
     <button class="btn btn-secondary" ng-click="disabledCheckOut()" ng-show="!isUserLoggedIn() && cart.items.length > 0">Оформить заказ</button>
